name:           literate-parser
version:        0.1.0.0
license:        MIT
license-file:   LICENSE
author:         Nick Pollard
maintainer:     nickedwardpollard@gmail.com
copyright:      2021 Nick Pollard
build-type:     Simple
cabal-version:  >=1.10

library
  hs-source-dirs: src
  ghc-options: -Wall -Werror
  exposed-modules: Lib
  build-depends: base >= 4.7 && < 5
  default-language: Haskell2010

test-suite tests
  hs-source-dirs: tests
  type: exitcode-stdio-1.0
  main-is: tests.hs
  build-depends:
      base >= 4.7 && < 5,
      tasty,
      tasty-hunit
  default-language: Haskell2010
